hide visibility form when drag-n-dropping

--- a/app/stylesheets/closet_hangers/_index.sass
+++ b/app/stylesheets/closet_hangers/_index.sass
@@ -251,6 +251,9 @@ body.closet_hangers-index
       .closet-list-hangers
         overflow: hidden
 
+      .visibility-form
+        display: none
+
   .closet-hangers-group-autocomplete-item, .closet-list-autocomplete-item
     span
       font-style: italic
