visibility form submit is a context button

--- a/app/stylesheets/closet_hangers/_index.sass
+++ b/app/stylesheets/closet_hangers/_index.sass
@@ -161,6 +161,8 @@ body.closet_hangers-index
         border-color: $background-color
 
       input[type=submit]
+        +context-button
+        font-size: inherit
         visibility: hidden
 
         &:active
